EmailGeneratos creates Email with components. Mail received correctly. Fake content.

--- a/app/template/email_template.html
+++ b/app/template/email_template.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
-    
-    {title}
-    {style}
+    {{meta}}
+    {{title}}
+    {{style}}
 
 </head>
 
 <body>
-    {button}
+    {{content}}
+    {{button}}
 </body>
 </html>
